cli/tests/snapshots/cli__run_images@place_image_align3.py.snap
---
source: cli/tests/cli.rs
assertion_line: 433
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_image_align3.py
---
<svg width="160" height="32" xmlns="http://www.w3.org/2000/svg">
  <g>
    <g>
      <g>
        <g>
          <defs><clipPath id="clip0" ><rect x="0" y="0" width="32" height="32" transform="rotate(0 16 16)" /></clipPath></defs>
          <g clip-path="url(#clip0)" >
            <g>
              <path d="M 0.5 0.5 L 32.5 0.5 L 32.5 32.5 L 0.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
              <path d="M 8 0 A 8 8 0 0 1 -8 0 A 8 8 0 0 1 8 0 Z" fill="rgba(255, 99, 71, 1.0)" />
            </g>
          </g>
          <defs><clipPath id="clip1" ><rect x="32" y="0" width="32" height="32" transform="rotate(0 48 16)" /></clipPath></defs>
          <g clip-path="url(#clip1)" >
            <g>
              <path d="M 32.5 0.5 L 64.5 0.5 L 64.5 32.5 L 32.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
              <path d="M 48 8 A 8 8 0 0 1 32 8 A 8 8 0 0 1 48 8 Z" fill="rgba(255, 99, 71, 1.0)" />
            </g>
          </g>
        </g>
        <defs><clipPath id="clip2" ><rect x="64" y="0" width="32" height="32" transform="rotate(0 80 16)" /></clipPath></defs>
        <g clip-path="url(#clip2)" >
          <g>
            <path d="M 64.5 0.5 L 96.5 0.5 L 96.5 32.5 L 64.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
            <path d="M 88 16 A 8 8 0 0 1 72 16 A 8 8 0 0 1 88 16 Z" fill="rgba(255, 99, 71, 1.0)" />
          </g>
        </g>
      </g>
      <defs><clipPath id="clip3" ><rect x="96" y="0" width="32" height="32" transform="rotate(0 112 16)" /></clipPath></defs>
      <g clip-path="url(#clip3)" >
        <g>
          <path d="M 96.5 0.5 L 128.5 0.5 L 128.5 32.5 L 96.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
          <path d="M 128 24 A 8 8 0 0 1 112 24 A 8 8 0 0 1 128 24 Z" fill="rgba(255, 99, 71, 1.0)" />
        </g>
      </g>
    </g>
    <defs><clipPath id="clip4" ><rect x="128" y="0" width="32" height="32" transform="rotate(0 144 16)" /></clipPath></defs>
    <g clip-path="url(#clip4)" >
      <g>
        <path d="M 128.5 0.5 L 160.5 0.5 L 160.5 32.5 L 128.5 32.5 Z" fill="none" stroke="rgba(0, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
        <path d="M 168 32 A 8 8 0 0 1 152 32 A 8 8 0 0 1 168 32 Z" fill="rgba(255, 99, 71, 1.0)" />
      </g>
    </g>
  </g>
</svg>
