cli/tests/snapshots/cli__run_images@place_images1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_images1.py
---
<svg width="24" height="24" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="24" height="24" transform="rotate(0 12 12)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <defs><clipPath id="clip1" ><rect x="0" y="0" width="24" height="24" transform="rotate(0 12 12)" /></clipPath></defs>
      <g clip-path="url(#clip1)" >
        <g>
          <defs><clipPath id="clip2" ><rect x="0" y="0" width="24" height="24" transform="rotate(0 12 12)" /></clipPath></defs>
          <g clip-path="url(#clip2)" >
            <g>
              <path d="M 0 0 L 24 0 L 24 24 L 0 24 Z" fill="rgba(218, 165, 32, 1.0)" />
              <path d="M 22 20 A 4 4 0 0 1 14 20 A 4 4 0 0 1 22 20 Z" fill="rgba(255, 255, 255, 1.0)" />
            </g>
          </g>
          <path d="M 4 6 A 4 4 0 0 1 -4 6 A 4 4 0 0 1 4 6 Z" fill="rgba(255, 255, 255, 1.0)" />
        </g>
      </g>
      <path d="M 18 2 A 4 4 0 0 1 10 2 A 4 4 0 0 1 18 2 Z" fill="rgba(255, 255, 255, 1.0)" />
    </g>
  </g>
</svg>
