cli/tests/snapshots/cli__run_images@place_images_align1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_images_align1.py
---
<svg width="64" height="64" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="64" height="64" transform="rotate(0 32 32)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <defs><clipPath id="clip1" ><rect x="0" y="0" width="64" height="64" transform="rotate(0 32 32)" /></clipPath></defs>
      <g clip-path="url(#clip1)" >
        <g>
          <defs><clipPath id="clip2" ><rect x="0" y="0" width="64" height="64" transform="rotate(0 32 32)" /></clipPath></defs>
          <g clip-path="url(#clip2)" >
            <g>
              <path d="M 0 0 L 64 0 L 64 64 L 0 64 Z" fill="rgba(218, 165, 32, 1.0)" />
              <path d="M 40 22.430781 L 64 64 L 16 64 Z" fill="rgba(154, 205, 50, 1.0)" />
            </g>
          </g>
          <path d="M 40 6.430781 L 64 48 L 16 48 Z" fill="rgba(154, 205, 50, 1.0)" />
        </g>
      </g>
      <path d="M 40 -9.569219 L 64 32 L 16 32 Z" fill="rgba(154, 205, 50, 1.0)" />
    </g>
  </g>
</svg>
