cli/tests/snapshots/cli__run_images@place_line2.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_line2.py
---
<svg width="40" height="40" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="40" height="40" transform="rotate(0 20 20)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0 0 L 40 0 L 40 40 L 0 40 Z" fill="rgba(211, 211, 211, 1.0)" />
      <path d="M -9.5 50.5 L 50.5 -9.5" fill="none" stroke="rgba(128, 0, 0, 1.0)" stroke-linecap="round" stroke-linejoin="miter" stroke-miterlimit="10" />
    </g>
  </g>
</svg>
