cli/tests/snapshots/cli__run_images@place_line3.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_line3.py
---
<svg width="100" height="100" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0" y="0" width="100" height="100" transform="rotate(0 50 50)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0 0 L 100 0 L 100 100 L 0 100 Z" fill="rgba(85, 107, 47, 1.0)" />
      <path d="M 25 25 L 100 100" fill="none" stroke="rgba(218, 165, 32, 1.0)" stroke-width="30" stroke-linecap="round" stroke-linejoin="round" />
    </g>
  </g>
</svg>
