cli/tests/snapshots/cli__run_images@place_polygon1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/place_polygon1.py
---
<svg width="65.0" height="65.0" xmlns="http://www.w3.org/2000/svg">
  <defs><clipPath id="clip0" ><rect x="0.0" y="0.0" width="65.0" height="65.0" transform="rotate(0.0 32.5 32.5)" /></clipPath></defs>
  <g clip-path="url(#clip0)" >
    <g>
      <path d="M 0.0 0.0 L 65.0 0.0 L 65.0 65.0 L 0.0 65.0 Z" fill="rgba(173, 216, 230, 1.0)" />
      <path d="M 30.0 -20.0 L 50.0 50.0 L -20.0 30.0 Z" fill="rgba(34, 139, 34, 1.0)" />
    </g>
  </g>
</svg>
