cli/tests/snapshots/cli__run_images@polygon1.py.snap
---
source: cli/tests/cli.rs
expression: "format!(\"{out}\")"
input_file: cli/tests/images/polygon1.py
---
<svg width="70" height="40" xmlns="http://www.w3.org/2000/svg">
  <path d="M 10 20 L 0 40 L 70 20 L 0 0 Z" fill="rgba(222, 184, 135, 1.0)" />
</svg>
